--- a/uearnSMB/build.gradle
+++ b/uearnSMB/build.gradle
@@ -65,10 +65,9 @@ repositories {
 }
 
 dependencies {
-    implementation files('libs/activation.jar')
-    implementation files('libs/additionnal.jar')
     implementation files('libs/libphonenumber-7.0.1.jar')
-    implementation files('libs/mail.jar')
+    implementation 'com.sun.mail:android-mail:1.6.0'
+    implementation 'com.sun.mail:android-activation:1.6.0'
 //noinspection GradleCompatible
     implementation 'com.google.android.gms:play-services-location:9.2.1'
     implementation 'com.google.android.gms:play-services-plus:9.2.1'
@@ -117,10 +116,6 @@ dependencies {
     implementation 'com.github.rahimlis:badgedtablayout:v1.2'
     implementation 'com.android.support:design:29.0.0'
     implementation 'com.skyfishjy.ripplebackground:library:1.0.1'
-
-    /*Youtube player SDK*/
-    implementation files('libs/YouTubeAndroidPlayerApi.jar')
-
     implementation 'com.github.douglasjunior:android-simple-tooltip:0.2.3'
 }
 
